<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/etISBN"
                        android:textColor="@android:color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/etISBNText"
                        android:singleLine="true"
                        android:padding="10dp"
                        android:inputType="textCapSentences" />

                    <EditText
                        android:id="@+id/etTitle"
                        android:textColor="@android:color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/etTitleText"
                        android:singleLine="true"
                        android:padding="10dp"
                        android:inputType="textCapSentences" />

                    <EditText
                        android:id="@+id/etAuthor"
                        android:textColor="@android:color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/etAuthorText"
                        android:singleLine="true"
                        android:padding="10dp"
                        android:inputType="textCapSentences" />

                    <EditText
                        android:id="@+id/etCourse"
                        android:textColor="@android:color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/etCourseText"
                        android:singleLine="true"
                        android:padding="10dp"
                        android:inputType="textCapSentences" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/addBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/addBtnText"
                android:layout_gravity="end"
                android:layout_marginEnd="5dp"
                android:onClick="addFunc"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>